## $Id$
##

# awk 'BEGIN{FS="|"} /^[a-zA-Z0-9]/ {x=$2; printf("\t%s \\\n", x)}' tests.list >> inputs/Makefile.am 
EXTRA_DIST= \
	test-image-justify-1.gbx \
	test-image-justify-2.gbx \
	test-image-offset-1.gbx \
	test-image-rotation-1.gbx \
	test-image-polarity-1.gbx \
	test-image-offset-2.gbx \
	test-layer-axis-select-1.gbx \
	test-layer-knockout-1.gbx \
	test-layer-knockout-2.gbx \
	test-layer-mirror-image-1.gbx \
	test-layer-mode-1.gbx \
	test-layer-offset-1.gbx \
	test-layer-rotation-1.gbx \
	test-layer-scale-factor-1.gbx \
	test-layer-step-and_repeat-1.gbx \
	test-layer-step-and_repeat-2.gbx \
	test-include-file-1.gbx \
	include-file-1.gbx \
	test-aperture-circle-1.gbx \
	test-aperture-obround-flash-1.gbx \
	test-aperture-rectangle-1.gbx \
	test-aperture-circle-flash-1.gbx \
	test-aperture-polygon-1.gbx \
	test-aperture-rectangle-flash-1.gbx \
	test-aperture-obround-1.gbx \
	test-aperture-polygon-flash-1.gbx \
	test-drill-leading-zero-1.exc \
	test-drill-repeat-1.exc \
	test-drill-trailing-zero-1.exc \
	test-polygon-fill-1.gbx \
	test-circular-interpolation-1.gbx
